# DougMatcher

./: Makefile.am  main.cpp  pmlmatcher.h
Matcher/: Makefile.am  config.status  configure.in  pmlmatcher.cpp  pmlmatcher.h
Matcher/interpolation/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.in  intermatch  interpolation.cpp  libtool
dtds/: score.dtd
libdouglet/: 2dpoint.cpp  2dpoint.h  Makefile  Makefile.am  Makefile.am~  Makefile.in  algorithms.cpp  algorithms.cpp~  algorithms.h  algorithms.h~  algorithms.lo  config-h.in~  config.h  config.status  configure  configure.in  configure.in~  fftfile.loT  freqfile.cpp  freqfile.cpp~  freqfile.h  freqfile.h~  freqfile.lo  guesture.cpp~  guesture.h~  libdouglet.la  libtool  pitchtracker.cpp  pitchtracker.cpp~  pitchtracker.h  pitchtracker.h~  pitchtracker.lo  soundfile.cpp~  soundfile.h  soundfile.h~  soundfile.lo  soundfile_0.1.cpp  soundfile_0.1.cpp~  soundfile_0.1.h  testpitch.cpp~  (+1 more)
libdouglet/.deps/: algorithms.Plo  freqfile.Plo  pitchtracker.Plo  soundfile.Plo
libdouglet/.libs/: libdouglet.la  libdouglet.lai  libdouglet.so.0  libdouglet.so.0.0.0
libdouglet/PMLtools/: main.cpp  main.cpp~  matched.xml  semantic.cache
libdouglet/autom4te.cache/: output.0  output.1  output.2  requests  (+3 more)
mergeparts/: #merged.xml#  #score.dtd#  .prel4.xml.swp  Makefile  Makefile.am  Makefile.am~  Makefile.in  compilecommand  config.status  configure  configure.in  libtool  log  main.cpp  main.cpp~  merged.xml  merged.xml~  mergedfinale.xml  mergeparts  note.dtd  note.dtd~  pml.dtd  pml.dtd~  pml_draft.dtd  pml_draft.dtd~  prel4.xml  semantic.cache  semantic.cache~
mergeparts/.deps/: main.Po
mergeparts/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
midi2pml/: Makefile  Makefile.am  Makefile.in  benmidi2pml  config.status  configure  configure.in  libtool  main.cpp  main.h  midifile.h  readmidi.cpp  readmidi.h
midi2pml/.deps/: main.Po  readmidi.Po
midi2pml/autom4te.cache/: output.0  output.1  traces.0  traces.1
pmllib/: #configure.in#  #gp#  #pmldocument.cpp#  #pmlelements.h#  Makefile  Makefile.am  Makefile.am~  Makefile.in  Makefile_old.am  addingelements.cpp  addingelements.cpp~  config-h.in  config.h  config.status  configure  configure.in  configure_old.in  directions  elements.h  elements.h~  errorhandler.cpp  errorhandler.cpp~  errorhandler.h  errorhandler.lo  fftfile.cpp~  fftfile.h~  libdoug.la  libpml.la  libtool  log  lp  main.cpp  note.h  note.h~  performanceiterator.cpp  performanceiterator.cpp~  performanceiterator.h  performanceiterator.h~  perfpart.cpp  perfpart.cpp~  (+65 more)
pmllib/.deps/: algorithms.Plo  errorhandler.Plo  freqfile.Tpo  perfpart.Plo  pitch.Plo  pitchel.Plo  pitchtracker.Plo  pmlbase.Plo  pmldocument.Plo  pmlelements.Plo  pnote.Plo  scorepart.Plo  snote.Plo  soundfile.Tpo  tuning.Plo  tuningel.Plo  xmlsc.Plo
pmllib/.libs/: libpml.la  libpml.lai  libpml.so.0  libpml.so.0.0.0
pmllib/autom4te.cache/: output.0  output.1  traces.1
(+63 files in other folders)
