AC_PREREQ(2.59)

AC_INIT([mergeparts], [0.1], [http://cmt.gla.ac.uk])
#AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.9 foreign])
AC_LANG([C++])
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL

AC_CHECK_HEADER([xercesc/dom/DOM.hpp], [break], AC_MSG_ERROR([unable to find xer
ces header files]))


AC_CONFIG_FILES([Makefile])
AC_OUTPUT
