AC_PREREQ(2.59)

AC_INIT([libpml], [0.1], [http://cmt.gla.ac.uk])
AC_CONFIG_HEADERS([config.h:config-h.in])

AM_INIT_AUTOMAKE([1.9 foreign])
AC_LANG([C++])
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL

AC_CHECK_HEADERS([math.h], [break])
AC_CHECK_HEADERS([xercesc/dom/DOMDocument.hpp], [break])
AC_CHECK_HEADERS([qstring.h], [break])
AC_CHECK_HEADERS([fftw3.h], [break])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT


